--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="header-stick">
             <div class="header__logo">
-                <img src="../images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <div class="header__logo__description">
                     <b>Профессиональный монтаж дымоходов</b> любой сложности на территории Киева и Киевской обл.
                 </div>
@@ -35,7 +35,7 @@
                 <div class="map" id="map-button">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.537137908103!2d30.487627315729267!3d50.393826479467606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8dab3f4759d%3A0x67dced8fbfa28384!2z0YPQuy4g0JLQsNGB0LjQu9GM0LrQvtCy0YHQutCw0Y8sIDMwLCDQmtC40LXQsiwgMDIwMDA!5e0!3m2!1sru!2sua!4v1622619291473!5m2!1sru!2sua"></iframe>
-                    <img src="../images/map-icon.png" alt="map">
+                    <img src="images/map-icon.png" alt="map">
                 </div>
                 <div class="header__map__address">
                     <p>
@@ -43,6 +43,7 @@
                 </div>
             </div>
             <div class="header__button">
+                <div class="shine"></div>
                 <a href="#">Консультация инженера</a>
             </div>
             
@@ -52,9 +53,9 @@
                         <i class="icon-phone"></i>
                         +38 067 242-58-70</p>
                     <div class="header__contacts__number__sns">
-                        <img src="../images/viber-icon.png" alt="viber">
-                        <img src="../images/telegram-icon.png" alt="telegram">
-                        <img src="../images/whatsapp-icon.png" alt="whatsapp">
+                        <img src="images/viber-icon.png" alt="viber">
+                        <img src="images/telegram-icon.png" alt="telegram">
+                        <img src="images/whatsapp-icon.png" alt="whatsapp">
                     </div>
                 </div>
             </div>
@@ -98,6 +99,7 @@
                     Рассчитайте стоимость монтажа вашего дымохода за 1 минуту и <b>получите скидку 15%</b>
                 </div>
                 <button class="discount__button">
+                    <div class="shine"></div>
                     <i class="icon-calculator"></i>
                     <p>Рассчитать стоимость монтажа и получить скидку</p>
                 </button>
@@ -106,14 +108,14 @@
                 <p>Лицензии и сертификаты в наличии</p>
                 <div class="photoslide">
                     <a href="#"><i class="icon-left-open"></i></a>
-                    <a href="../images/license.jpg" data-lightbox="image-1">
-                        <img src="/images/license_cut.jpg" alt="license">
+                    <a href="images/license.jpg" data-lightbox="image-1">
+                        <img src="images/license_cut.jpg" alt="license">
                     </a>
-                    <a href="../images/license.jpg" data-lightbox="image-1">
-                        <img src="../images/license_cut.jpg" alt="license">
+                    <a href="images/license.jpg" data-lightbox="image-1">
+                        <img src="images/license_cut.jpg" alt="license">
                     </a>
-                    <a href="../images/license.jpg" data-lightbox="image-1">
-                        <img src="../images/license_cut.jpg" alt="license">
+                    <a href="images/license.jpg" data-lightbox="image-1">
+                        <img src="images/license_cut.jpg" alt="license">
                     </a>
 
                     <a href="#"><i class="icon-right-open"></i></a>
