--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="header-stick">
             <div class="header__logo">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.svg" alt="logo">
                 <div class="header__logo__description">
                     <b>Профессиональный монтаж дымоходов</b> любой сложности на территории Киева и Киевской обл.
                 </div>
@@ -99,7 +99,6 @@
                     Рассчитайте стоимость монтажа вашего дымохода за 1 минуту и <b>получите скидку 15%</b>
                 </div>
                 <button class="discount__button">
-                    <div class="shine"></div>
                     <i class="icon-calculator"></i>
                     <p>Рассчитать стоимость монтажа и получить скидку</p>
                 </button>
