--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="header-stick">
             <div class="header__logo">
-                <img src="images/logo.svg" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <div class="header__logo__description">
                     <b>Профессиональный монтаж дымоходов</b> любой сложности на территории Киева и Киевской обл.
                 </div>
