--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
         integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link href = "fonts/UniNeue/fonts.css" rel = "stylesheet" type = "text/css" /> -->
     <title>Uvent</title>
 </head>
 
 <body>
-
-
     <button id="burger-menu">
         <span></span>
         <span></span>
